Open java.util too